--- a/packages/default/scss/editor/_theme.scss
+++ b/packages/default/scss/editor/_theme.scss
@@ -10,7 +10,6 @@
 
     kendo-editor {
         &.k-readonly {
-            .k-editor-content.k-state-focused,
             .k-editor-content.k-focus {
                 outline-color: $body-text;
             }
@@ -48,7 +47,7 @@
 
         // Hover & Actve state
         &:hover,
-        &.k-state-active,
+        &.k-active,
         &.k-active {
             border-color: $panel-border;
         }
@@ -66,7 +65,6 @@
 
     // Insert table
     .k-ct-popup {
-        .k-state-selected,
         .k-selected {
             @include fill( $selected-text, $selected-bg, $selected-border, none );
         }
