--- a/packages/default/scss/rating/_layout.scss
+++ b/packages/default/scss/rating/_layout.scss
@@ -20,7 +20,7 @@
             box-sizing: border-box;
         }
 
-        &.k-state-readonly {
+        &.k-readonly {
             pointer-events: none;
         }
     }
