--- a/packages/fluent/scss/rating/_layout.scss
+++ b/packages/fluent/scss/rating/_layout.scss
@@ -25,7 +25,7 @@
             box-sizing: border-box;
         }
 
-        &.k-state-readonly {
+        &.k-readonly {
             pointer-events: none;
         }
     }
