--- a/packages/material/scss/button/_layout.scss
+++ b/packages/material/scss/button/_layout.scss
@@ -17,8 +17,7 @@
 
         &:disabled,
         &[disabled],
-        &.k-disabled,
-        &.k-state-disabled {
+        &.k-disabled {
             opacity: 1;
             filter: none;
         }
